CHANGES
=======

master
------
* `sparts.collections` introduces a PriorityQueue and UniqueQueue
* `sparts.tasks.select` introduces a SelectTask, helpers for working with Popen
* `sparts.tasks.queue` introduces a PriorityQueueTask and UniqueQueueTask

0.6.1
------
* Fix vservice initialization when daemonize is not installed
* Add `map` and `submit` API to QueueTask

0.6.0
-----
* Support for POSIX daemonization helpers (--daemonize, --kill, --status, etc) if `daemonize` is installed.
* ThriftHandlerTask subclasses now verify it implements MODULE.Iface
* `QueueTask` new counters: queue_depth, n_trylater, n_unhandled, n_completed, execute_duration_ms
* Add http-based thrift support to sparts.thrift.client
* Tasks now accessible via attributes on `service.tasks` by name and via `get()` and `require()`
* Fixed a race condition in deferred errback handling in QueueTask
* ExecuteContext (for QueueTask) now supports a `future` keyword argument.
* `sparts.timer` with `Timer` class for tracking timings
* `sparts.counters.Callback` counter that take a callback to be called to return the value.
* Better support for counters defined in `initTask()` (instead of declaratively)
* New function: sparts.timer.run_until_true(f, timeout)
* Improved unittest stability
* Improved support for v6
* Improved support for fbthrift

0.5.1
-----
* Renamed FB303ProcessorTask to FB303HandlerTask
* NBServerTask can now specify a MODULE to dictate which thrift handler task should be used
  in the event that more than one has been registered.
* Changed thrift handler semantics: you must set a MODULE instead of PROCESSOR on things now


0.5.0
-----
* Moved counters from sparts.sparts to sparts.counters
* Fix some bugs in DirectoryWatcherTask, counters
* Add an initService() hook to VService
* Added a hook to do per-thread Task-specific initialization, initTaskThread()
* `sparts.thrift.client` with ThriftClient helper to reduce synchronous thrift client boilerplate